export interface User {
    name: string;
}

export const x = 'test';

export function hello() {
    console.log(x);
    return {
        name: 'Jason'
    }
}
