...
                                    </Text>
                                </Box>
                            ) : (
                                <Pressable
                                    onPress={() => onSubmit(item.contact)}
                                    _pressed={{ background: "text.200" }}
                                    testID="contactListItem"
                                >
                                    <Text style={{ paddingHorizontal: 15, paddingVertical: 10 }}>
                                        {item.contact.contactName}
                                    </Text>
                                </Pressable>
                            )}
...
