...

    await dataSource.manager.query(`
        INSERT INTO public."user" ("firstName", "lastName", email, password, "createdAt", "areNotificationsEnabled") VALUES ('John', 'Doe', 'john@example.com', '$2b$10$qRyrAC.2KfxbUOne4Rh9LuQnexiHJsjO4p1jX3rNVkQkDRkenaW22', '2022-10-20 20:12:19.693457', 'false');
    `);

    await dataSource.manager.query(`
        INSERT INTO public.wallet ("address", "userId", "name", "currencyType") VALUES ('0xf2f5c73fa04406b1995e397b55c24ab1f3ea726c', 1, 'Ether Wallet Main', 'ETHEREUM');
        INSERT INTO public.wallet ("address", "userId", "name", "currencyType") VALUES ('0xb64a30399f7f6b0c154c2e7af0a3ec7b0a5b131a', 1, 'Ether Savings', 'ETHEREUM');
        INSERT INTO public.wallet ("address", "userId", "name", "currencyType") VALUES ('0x4a55474eacb48cefe25d7656db1976aa7ae70e3c', 1, 'Ethereum Checking Wallet', 'ETHEREUM');
        INSERT INTO public.wallet ("address", "userId", "name", "currencyType") VALUES ('bc1qe4zsm2eeus8j7xqluprkud88wsrhrz8j9vlhqzdzq3e9eq4ygw8qazc3cn', 1, 'Main Bitcoin', 'BITCOIN');
        INSERT INTO public.wallet ("address", "userId", "name", "currencyType") VALUES ('bc1qt2sps5xjpu4r5tten65c8nue8zqg8a235wmakq', 1, 'Savings Bitcoin', 'BITCOIN');
    `);

    await dataSource.manager.query(`
        INSERT INTO public.tag ("tagName", "userId") VALUES ('Groceries', 1);
        INSERT INTO public.tag ("tagName", "userId") VALUES ('Gifts', 1);
...
