...
                    </Box>
                )}
            </>
        );
    }

    return <FlatList data={transactionsWithHeader} renderItem={renderItem} testID="transactionsList" />;
}

type DataWithHeader<T> = {
    data: T;
    header: boolean;
};
...
