...
                            filters.push(filterByDate);
                        }
                    }
                    route.params.setFilters(filters);
                    navigation.goBack();
                }}
                testID="applyFiltersSubmit"
            >
                Apply filters
            </Button>
        </View>
    );
}
...
