...
    switch (sortType) {
        case "sortDateNewest":
            returnString = "Date: newest first";
            return returnString;

        case "sortDateOldest":
            returnString = "Date: oldest first";
            return returnString;

        case "sortAmountHighest":
            returnString = "Amount: highest first";
            return returnString;

...
